recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:4: error: not found: type double
	avance(100:double)
                   ^FourSquare:5: error: not found: type double
	droite(90:double)
                  ^