recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
for (i<-1 to 4){
	avance(100:double)
	droite(90:double)
}
}
